--- a/communities.Rmd
+++ b/communities.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 
 ### Configuración previa y datos
 
-Los procedimientos incluidos a continuación asumen la instalación previa de R y RStudio^1^, para trabajar en este último. Instrucciones al respecto se encuentran en el apartado *Configuración* del módulo **Ecología en código abierto** del Campus Virtual de UniOvi.
+Los procedimientos incluidos a continuación asumen la instalación previa de R y RStudio^1^, para trabajar en este último. Instrucciones al respecto se encuentran en el apartado *Configuración* del módulo **Ecología en código abierto** del Campus Virtual de UniOvi, o [aquí en Internet](https://github.com/quevedomario/eco3r/blob/master/config.md).
 
 Antes de entrar a analizar datos, es siempre recomendable echarles un vistazo, especialmente si trabajamos con datos recogidos por otros. Para entender la estuctura de estos datos lo más fácil es abrir **comunidades.xls**, incluido en el archivo comprimido (Ctrl. + clic) [**comunidades.zip**](https://github.com/quevedomario/eco3r/blob/master/comunidades.zip). Incluye varias hojas de cálculo:
 
