--- a/stages_pva.Rmd
+++ b/stages_pva.Rmd
@@ -16,9 +16,9 @@ library (popbio)
 ### Análisis de viabilidad para una población de *Lotus arinagensis*
 
 ![](stages_pva_files/figure-gfm/lotus_arinagensis1.jpg)
-La imagen es una captura de pantalla de la información recogida en el Atlas y Libro Rojo de la Flora Vascular Amenazada de España, [disponible en pdf; Ctrl click para abrir en otra pestaña](https://www.miteco.gob.es/es/biodiversidad/temas/inventarios-nacionales/829_tcm30-99330.pdf). 
+La imagen es una captura de pantalla de la información recogida en el Atlas y Libro Rojo de la Flora Vascular Amenazada de España, [disponible en pdf; ctrl click para abrir en otra pestaña](https://www.miteco.gob.es/es/biodiversidad/temas/inventarios-nacionales/829_tcm30-99330.pdf). 
 
-El ejercicio practica la inclusión de la variabilidad ambiental no predecible, *estocasticidad ambiental*, en los modelos de poblaciones estructuradas vistos anteriormente en https://github.com/quevedomario/eco3r/blob/master/stages.md y en https://github.com/quevedomario/eco3r/blob/master/stages2.md  
+El ejercicio incluye variabilidad ambiental no predecible, *estocasticidad ambiental*, en los modelos de poblaciones estructuradas vistos anteriormente en https://github.com/quevedomario/eco3r/blob/master/stages.md y en https://github.com/quevedomario/eco3r/blob/master/stages2.md  
 
 #### Construcción del modelo
 El modelo está estructurado en 4 estadios, plántulas y 3 clases de reproductores. Introducimos el vector de estadios, al que llamo arbitrariamente `lotus_stages`; podría llamarse `molly`, pero quizás tendríamos problemas para recordarlo después: 
@@ -42,13 +42,13 @@ lotus_trans <- c(
 ) 
 ```
 
-Y construimos la matriz de transición combinando estadios y transiciones:
+Y construimos la matriz de transición combinando estadios `lotus_stages` y transiciones `lotus_trans`:
 ```{r}
 lotus_matrix <- matrix2(lotus_trans, lotus_stages)
 ```
 
 #### Esquema del ciclo de vida
-Una vez definido el modelo de la población, podemos empezar a extraerle información. Por ejemplo, dibujando el ciclo de vida de *L. arinagensis* con la función `plotmat()`. Puede pareer complicada porque presenta muchos ajustes posibles (e.g. muchos *argumentos*), que determinarán el aspecto final del gráfico:
+Una vez definido el modelo de la población, podemos empezar a extraerle información. Por ejemplo, dibujando el ciclo de vida de *L. arinagensis* con la función `plotmat()`. Puede parecer complicada, ya ofrece muchas posibilidades de ajustar el aspecto final del gráfico (e.g. muchos *argumentos*): 
 ```{r, fig.asp=0.8}
 plotmat(lotus_matrix, relsize =0.80, self.cex = 0.6, self.shifty=0.08, self.shiftx = c(0,0,-0.05,0),
         box.prop = 0.3, box.type = "round" , box.size = 0.1, lwd = 1, pos =, 
@@ -56,14 +56,14 @@ plotmat(lotus_matrix, relsize =0.80, self.cex = 0.6, self.shifty=0.08, self.shif
         main = "Esquema del ciclo de L. arinagensis")
 ```
 
-Podemos obtener explicación de cómo trabajan esos argumentos con `?plotmat`.
+`?plotmat` devuelve instrucciones para esos argumentos.
 
-El ciclo de vida facilita la interpretación visual de las transiciones observadas en la población, y de las diferencias dentro de la misma: algunos individuos permanecen en el mismo estadio entre t y t + 1; otros regresan a estadios anteriores; y otros se "saltan" estadios en el crecimiento. Esas peculiaridades, especialmente habituales en organismos modulares con modelos basados en tamaño o estadio reproductor, se modelan eficientemente con estas matrices.   
+El ciclo de vida facilita la interpretación visual de las transiciones observadas en la población, y de las diferencias dentro de la misma: algunos individuos permanecen en el mismo estadio entre t y t + 1; otros regresan a estadios anteriores; y otros se "saltan" estadios en el crecimiento. Esas peculiaridades, especialmente habituales en organismos modulares y modelos basados en tamaño o estadio reproductor, se estudian eficientemente con este tipo de modelos matriciales.   
 
 #### Cálculos deterministas {#lambda}
 Los cálculos deterministas se extraerían de manera análoga a la vista en ejercicios anteriores (https://github.com/quevedomario/eco3r/blob/master/stages.md y https://github.com/quevedomario/eco3r/blob/master/stages2.md), desde los cuales es fácil adaptar el código.
 
-Por ahora con obtener lambda es suficiente, para compararla con los resultados que incorporen estocasticidad más adelante:
+Por ahora con obtener lambda es suficiente, para compararla con los resultados que incorporarán estocasticidad más adelante:
 ```{r}
 lambda (lotus_matrix)
 ```
@@ -93,29 +93,34 @@ lotus_20042005 <- matrix(c(
 ), nrow = 4, byrow = TRUE, dimnames = list(lotus_stages, lotus_stages))
 ```
 
-Una vez introducidas en la memoria de la sesión de R, combinamos las tres matrices en una lista, formato requerido por la librería `popbio()` para realizar algunos cálculos:
+Una vez almacenadas en la sesión de R, combinamos las tres matrices en una *lista*, el formato requerido por la librería `popbio()` para realizar algunos cálculos:
 ```{r}
 lotus_lista <- list(lotus_20022003, lotus_20032004, lotus_20042005)
 ```
 
-#### Proyección estocástica
-A continuación podemos simular el crecimiento bajo influencia de estocásticidad ambiental, con la función `stoch.projection()`. Esta requiere 2 o más matrices de proyección (tenemos 3); es decir, requiere tener información sobre la variación en las tasas vitales. 
+Para echar un vistazo a ese formato, podemos visualizar ese `lotus_lista`:
 
-El resultado de la *proyección estocástica* lo almacenamos en un objeto **lotus_stoch_proj**. Los argumentos de la función son el tiempo de proyección `tmax=` y el número de repeticiones `nreps=`:
+```{r echo=FALSE}
+`lotus_lista`
+```
+
+
+#### Proyección estocástica
+A continuación simulamos el crecimiento bajo influencia de estocásticidad ambiental, usando la función `stoch.projection()`. Esta requiere 2 o más matrices de proyección (tenemos 3); es decir, requiere tener información sobre la variación en las tasas vitales. 
+
+El resultado de la *proyección estocástica* lo guardamos como **lotus_stoch_proj**. Los argumentos de la función son el tiempo de proyección `tmax=` y el número de repeticiones `nreps=`:
 ```{r}
 set.seed(12345)
 lotus_stoch_proj <- stoch.projection (lotus_lista, lotus_n0, tmax=25, nreps=1000)
 tail (lotus_stoch_proj)
 ```
 
-La función `tail()`anterior muestra las 6 últimas de las 1000 (`nreps=1000`) proyecciones estocásticas de nuestro conjunto de matrices de *Lotus arinagensis*. Nos muestra el tamaño de cada estadio a los 25 años (`tmax=25`), sometido a variación ambiental. Las fluctuaciones son consecuencia de los distintos valores de las transiciones obtenidos en las tres temporadas de campo, y recogidos en las matrices **lotus_20022003**, **lotus_20032004** y **lotus_20042005**. Por ejemplo, el elemento `[4,1]` de las matrices indica la probabilidad de transición del estadio *plántula* a *repro3* entre t y t+1, y oscila entre 0 y 0.379. Y en el resultado la abundancia del estadio *plántula* oscila entre 113.7 (repetición 998) y 885.3 (repetición 997) en las 6 últimas repeticiones de la proyección.
-
-La función `set.seed(12345)` es responsable de que todos obtengamos el mismo resultado a partir dde este guión, a pesar de "jugar" con números aleatorios. Le dice al generador de números aleatorios por donde empezar a generar. Es decir, proporciona un código repetible. De no definirlo onbtendríamos un resultado diferente para cada proyección, si bien resultado general será esencialmente el mismo si el número de repeticiones `nreps=` es suficientemente grande.
+La función `tail()`anterior muestra las 6 últimas de las 1000  proyecciones (`nreps=1000`) estocásticas^2^ de nuestro conjunto de matrices de *Lotus arinagensis*. Nos muestra el tamaño de cada estadio a los 25 años (`tmax=25`), sometido a variación ambiental. Las fluctuaciones son consecuencia de los distintos valores de las transiciones obtenidos en las tres temporadas de campo, y recogidos en las matrices **lotus_20022003**, **lotus_20032004** y **lotus_20042005**. Por ejemplo, el elemento `[4,1]` de las matrices que indica la probabilidad de transición del estadio *plántula* a *repro3* entre t y t+1, oscila entre 0 y 0.379. Y en el resultado la abundancia del estadio *plántula* oscila entre 113.7 (repetición 998) y 885.3 (repetición 997) en las 6 últimas repeticiones de la proyección.
 
 #### Tasa estocástica de crecimiento 
-Nos podemos preguntar cómo afecta la estocasticidad ambiental a la tasa asintótica de crecimiento, lambda. El valor determinista de la misma obtenido con `lambda (lotus_matrix)` era 1.02. La librería **popbio** calcula la tasa de crecimiento estocástico usando la función `stoch.growth.rate()`, y devuelve dos aproximaciones: 
+Nos podemos preguntar cómo afecta la estocasticidad ambiental a la tasa asintótica de crecimiento, lambda. El valor determinista de la misma obtenido con `lambda (lotus_matrix)` era 1.02. La librería **popbio** calcula la tasa de crecimiento estocástico usando la función `stoch.growth.rate()`, mediante dos aproximaciones: 
 
-- *Analítica*, basada en los elementos de esas matrices. Esta se llama *aproximación analítica de Tuljapurkar*. 
+- *Analítica*, basada en datos de las matrices. Esta se llama *aproximación analítica de Tuljapurkar*. 
 - *Simulada*, utilizando en cada repetición una de las 3 matrices disponibles en **lotus_lista**. 
 
 Aparecen identificadas como `$aprox` y `$sim` en los resultados:
@@ -134,15 +139,15 @@ Esos valores próximos a 0 corresponden en realidad a la tasa intrínseca de cre
 `$sim.CI` en el resultado de la tasa estocástica de crecimiento muestra el intervalo de confianza para la *r* estocástica simulada (la analítica es un valor único derivado de la matriz), en este caso incluyendo 0 en el centro de la distribución de valores; indica una población con una lambda estocástica esencialmente igual a 1.
 
 #### Elasticidades
-En el ejercicio previo (Ctrl. click para abrir en una pestaña nueva) [de análisis exclusivamente determinista](https://github.com/quevedomario/eco3r/blob/master/stages.md) veíamos que la salida de `eigen.analysis()` incluía sensibilidades y elasticidades. La **elasticidad** de un elemento de la matriz de transición es el cambio proporcional en lambda que resulta de un cambio en ese elemento de la matriz. Las elasticidades indican *a priori* qué elementos de la matriz son **más determinantes para la dinámica de la población**.
+En el ejercicio previo (Ctrl. click para abrir en una pestaña nueva) [de análisis exclusivamente determinista](https://github.com/quevedomario/eco3r/blob/master/stages.md) veíamos que la salida de `eigen.analysis()` incluía sensibilidades y elasticidades. La **elasticidad** de un elemento de la matriz de transición es el cambio proporcional en lambda como consecuencia de un cambio en ese elemento de la matriz. Las elasticidades indican *a priori* qué elementos de la matriz son **más determinantes en la dinámica de la población**.
 
-La obtenemos con la función `stoch.sens()`:
+Las obtenemos con la función `stoch.sens()`:
 ```{r}
 set.seed(12345)
 stoch.sens(lotus_lista)
 ```
 
-La tasa de crecimiento asintótica lambda = 1 indica una población con dinámica estable, si las tasas vitales de la matriz se mantienen. Sin embargo un análisis de viabilidad debe ofrecer un resultado más concreto: probabilidad de extinción en un tiempo determinado. Ese cálculo lo podemos ofrecer a partir de la función `stoch.quai.ext`. En realidad calcula la probabilidad de cuasi-extinción, o probabilidad de que la abundancia de la población baje de un determinado umbral:
+La tasa de crecimiento asintótica lambda = 1 indica una población con dinámica estable, si las tasas vitales de la matriz se mantienen. Sin embargo un análisis de viabilidad debe ofrecer un resultado más concreto: probabilidad de extinción en un tiempo determinado. Ese cálculo lo podemos extraer con la función `stoch.quasi.ext`. En realidad calcula la probabilidad de cuasi-extinción, o probabilidad de que la abundancia de la población baje de un determinado umbral:
 
 ```{r}
 set.seed(12345)
@@ -150,12 +155,14 @@ lotus_sqe <- stoch.quasi.ext (lotus_lista, lotus_n0, tmax=25, Nx=50, maxruns = 1
 tail(lotus_sqe)
 ```
 
-El código implica 10 ejecuciones `maxruns=` separadas de la estima de probabilidad de cuasi-extinción, cada una con `nreps=` 1000 estimas de crecimiento de la población, ante un umbral de `Nx=` 50 individuos y un tiempo de `tmax=`25 años. `tail(lotus_sqe)` muestra las seis últimas filas, años en este caso, del resultado `lotus_sqe`. Fijándonos en el año 25, podemos resumir la probabilidad media de cuasi-extinción proyectada a 25 años: 
+El código implica 10 ejecuciones `maxruns=` separadas de la estima de probabilidad de cuasi-extinción, cada una con `nreps=` 1000 estimas de crecimiento de la población, ante un umbral de cuasi-extinción de `Nx=` 50 individuos y un tiempo `tmax=`25 años. 
+
+`tail(lotus_sqe)` muestra las seis últimas filas, años en este caso, del resultado `lotus_sqe`. Fijándonos en el año 25, podemos resumir la probabilidad media de cuasi-extinción proyectada a 25 años: 
 ```{r}
 mean(lotus_sqe[25,]); sd(lotus_sqe[25,])
 ```
 
-Es decir, pedimos la media y desviación estándar de la probabilidad de que N~t~ < N~x~ en el año 25 de cada una de las 10 ejecuciones. A pesar de que la [tasa de crecimiento determinista](#lambda) era 1.02, teniendo en cuenta la variabilidad ambiental reflejada en las tres matrices ed 2002 a 2005, tenemos una probabilidad superior al 10% de que la población disminuya por debajo de 50 individuos en 25 años.
+Es decir, extraemos la media `mean()` y desviación estándar `sd()` de la probabilidad de que N~t~ < N~x~ en el año 25 de cada una de las 10 ejecuciones. A pesar de que la [tasa de crecimiento determinista](#lambda) era 1.02, teniendo en cuenta la variabilidad ambiental reflejada en las tres matrices de 2002 a 2005, tenemos una probabilidad superior al 10% de que la población disminuya por debajo de 50 individuos en 25 años.
 
 Para terminar, usamos aquello de que una imagen vale más que mil palabras, también en el contexto de análisis de viabilidad de poblaciones:
 ```{r, fig.asp=0.8, fig.align='center'}
@@ -164,7 +171,7 @@ matplot (lotus_sqe, xlab="Años", ylab=expression(P[cuasi-extinción]),
 ```
 
 
-#### Enlaces y referencias
+#### Enlaces, notas, y referencias
 Para abrir los enlaces en otra pestaña, *botón derecho + abrir en nueva pestaña*, o *Ctrl click*)  
-1. Datos incluidos en Iriondo et al. (Eds). 2009. [Poblaciones en peligro: viabilidad demográfica de la flora vascular amenazada de España. Madrid: Ministerio de Medio Ambiente, y Medio Rural y Marino](https://www.miteco.gob.es/es/biodiversidad/temas/inventarios-nacionales/viabilidaddemografica_tcm30-99752.pdf)
-  
+1. Datos incluidos en Iriondo et al. (Eds). 2009. [Poblaciones en peligro: viabilidad demográfica de la flora vascular amenazada de España. Madrid: Ministerio de Medio Ambiente, y Medio Rural y Marino](https://www.miteco.gob.es/es/biodiversidad/temas/inventarios-nacionales/viabilidaddemografica_tcm30-99752.pdf)  
+2. La función `set.seed(12345)` es responsable de que todos obtengamos el mismo resultado a partir de este guión, a pesar de "jugar" con números aleatorios. Le dice al generador de números aleatorios por donde empezar. Es decir, proporciona un código repetible. De no definirlo obtendríamos un resultado diferente en cada proyección, si bien el resultado general será esencialmente el mismo si el número de repeticiones `nreps=` es suficientemente grande.
