--- a/communities.Rmd
+++ b/communities.Rmd
@@ -122,7 +122,8 @@ rarecurve(semanas_vegan, sample = 50,
           col =  c("black", "forestgreen", "blue", "red", "violet", "orange", "navy"),
           lwd = 1.5, xlab="individuos identificados", ylab="taxones encontrados")
 ```
-La línea vertical marca el tamaño muestral de referencia, especificado en el código con la opción `sample=`. las líneas horizontales muestran la riqueza de especies correspondiente a ese tamaño de muestra de referencia.
+
+La línea vertical marca el tamaño de muestra de referencia, especificado en el código con la opción `sample=`. las líneas horizontales muestran la riqueza de especies en cada semana correspondiente a dicho tamaño de muestra de referencia.
 
 Las posibilidades de análisis son exhaustivas. Podemos por ejemplo extraer con facilidad la pendiente de las curvas para un determinado número de individuos identificados; 20 y 50 en este caso:
 
