--- a/networks.rmd
+++ b/networks.rmd
@@ -12,7 +12,7 @@ El ejercicio requiere la instalación de las librerías `cheddar` y `foodweb`, y
 
 ### Los datos
 
-Los datos usados en este ejercicio están en el archivo comprimido  [**redes.zip**](https://github.com/quevedomario/eco3r/blob/master/redes.zip). Al descomprimirlo en la carpeta de trabajo, mostrará 4 archivos de datos separados por comas (csv), 3 de ellos dentro de una carpeta *foodweb_paine*. Corresponden a los enlaces tróficos del experimento de Paine^1^ excluyendo a la estrella de mar *Pisaster ochraceus*^2^ de charcas de marea, con el añadido simulado de 8 tipos de productores primarios.
+Los datos usados en este ejercicio están en el archivo comprimido  [**redes.zip**](https://github.com/quevedomario/eco3r/blob/master/redes.zip). Al descomprimirlo en la carpeta de trabajo, mostrará 4 archivos de datos separados por comas (extensión csv), 3 de ellos dentro de una carpeta *foodweb_paine*. Corresponden a los enlaces tróficos del experimento de Paine^1^ excluyendo a la estrella de mar *Pisaster ochraceus*^2^ de charcas de marea, con el añadido simulado de 8 tipos de productores primarios.
 
 ![](networks_files/figure-markdown_github/paine_starfish.png)
 
@@ -20,7 +20,7 @@ Los datos usados en este ejercicio están en el archivo comprimido  [**redes.zip
 
 La librería **foodweb** dibuja **diagramas tridimensionales e interactivos de redes tróficas**, y extrae métricas habituales en el estudio de las mismas. Sin embargo, no está actualizada, por lo que usaremos solo su función de visualización. Para obtener las métricas usaremos después otra librería.
 
-```{r echo=TRUE}
+```{r echo=TRUE, message=FALSE}
 library(foodweb)
 ```
 
@@ -36,7 +36,7 @@ plotweb (col=c("red", "orange", "blue", "green"), radii=c(15,15,15,15))
 
 ![](networks_files/figure-markdown_github/paine_starfish_3d.png)
 
-Un vistazo a la representación 3D de esta red trófica simplificada muestra **4 niveles tróficos, omnivoría, y dos compartimentos claros**, definidos por productores primarios bentónicos y planctónicos, y consumidores raspadores y filtradores.
+Un vistazo a la representación 3D de esta red trófica simplificada muestra **4 niveles tróficos, omnivoría, y dos compartimentos claros**, definidos por productores primarios bentónicos y planctónicos, y consumidores raspadores y filtradores. El mesopredador *Thais* y el predador superior *Pisaster* conectan ambos compartimentos.
 
 ### Análisis de propiedades de redes tróficas
 
@@ -52,13 +52,13 @@ Para cargar la red trófica adaptada al formato requerido por la librería `ched
 paine_cheddar <- LoadCommunity(dir="foodweb_paine")
 ```
 
-`cheddar` contiene muchas funciones, pero estas son generalmente fáciles de usar. Por ejemplo, la función `TLPS()` devuelve los **vínculos tróficos** entre las especies o nodos de la red. `head()` limita la presentación de datos en la salida a las 6 primeras filas:
+`cheddar` contiene muchas funciones, pero estas son generalmente fáciles de usar. Por ejemplo, la función `TLPS()` devuelve los **vínculos tróficos** entre las especies (nodos) de la red. `head()` limita la presentación de datos en la salida a las 6 primeras filas:
 
 ```{r}
 head(TLPS(paine_cheddar))
 ```
 
-Las proporciones de nodos caníbales y omnívoros son susceptibles de variar mucho entre distintas comunidades, entre otros factores en función de la productividad, y por ello son objeto habitual de análisis. Las siguientes líneas comprueban si hay **nodos caníbales y omnívoros** en la red de *Pisaster*: 
+Las proporciones de nodos caníbales y omnívoros son susceptibles de variar mucho entre distintas comunidades, en función de la productividad entre otros factores, y por ello son objeto habitual de análisis. Las siguientes líneas comprueban si hay **nodos caníbales y omnívoros** en la red de *Pisaster*: 
 
 ```{r}
 IsCannibal(paine_cheddar)
@@ -69,7 +69,7 @@ Ambos casos devuelven **TRUE** para *Pisaster*, la única especie identificada e
 
 #### Pintando la red trófica
 
-A diferencia de los diagramas de la librería `foodweb` en este caso la posición de los nodos es consecuencia de la posición trófica de los mismos, no del nivel trófico. Por eso *Thais* y *Pisaster* aparecen más cerca en este diagrama:
+A diferencia de los diagramas de la librería `foodweb` en este caso la posición de los nodos es consecuencia de la **posición trófica** de los mismos, no del nivel trófico. Por eso *Thais* y *Pisaster* aparecen más cerca en este diagrama:
 
 ```{r}
 PlotWebByLevel(paine_cheddar, main="")
